# Synthetic-Client

./: README.md
Synthetic/: CMakeLists.txt  Synthetic.cpp
Synthetic/Client/: CMakeLists.txt
Synthetic/Client/Math/: CMakeLists.txt  Math.h
Synthetic/Client/Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Synthetic/Client/Synthetic/: CMakeLists.txt  Synthetic.cpp  Synthetic.h
Synthetic/Client/Synthetic/Category/: CMakeLists.txt  Category.cpp  Category.h
Synthetic/Client/Synthetic/Hook/: CMakeLists.txt  Hook.cpp  Hook.h
Synthetic/Client/Synthetic/Hook/Hooks/: CMakeLists.txt
Synthetic/Client/Synthetic/Hook/Hooks/Actor/: Actor.cpp  Actor.h  CMakeLists.txt
Synthetic/Client/Synthetic/Hook/Hooks/ClientInstance/: CMakeLists.txt  (+2 more)
Synthetic/Client/Synthetic/Manager/: CMakeLists.txt  Manager.cpp  Manager.h
Synthetic/Client/Synthetic/Module/: CMakeLists.txt  Module.cpp  Module.h
Synthetic/Client/Synthetic/Module/Modules/: CMakeLists.txt  TestModule.cpp  TestModule.h
Synthetic/Client/Synthetic/SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
Synthetic/Client/Synthetic/SDK/Classes/: Actor.h  Block.h  BlockSource.h  ClientInstance.cpp  ClientInstance.h  Container.h  Dimension.h  GameMode.h  GameSettings.h  GuiData.h  Level.h  LoopbackPacketSender.h  MinecraftGame.h  MinecraftUIRenderContext.h  Packet.h  Player.h  PlayerInventory.h
Synthetic/Client/Utils/: CMakeLists.txt  RenderUtils.cpp  RenderUtils.h  Utils.cpp  Utils.h
Synthetic/includes/: CMakeLists.txt
Synthetic/includes/gsl/pipelines/: steps.yml
Synthetic/includes/gsl/tests/: span_ext_tests.cpp
(+48 files in other folders)
